--- a/Week-3/ET5003_Etivity2_Rana_Das_19137338.ipynb
+++ b/Week-3/ET5003_Etivity2_Rana_Das_19137338.ipynb
@@ -286,12 +286,6 @@
         "id": "bbuqCoAYYuVP"
       },
       "source": [
-        "# from google.colab import drive\n",
-        "# drive.mount('/content/drive', force_remount=True)\n",
-        "\n",
-        "# Path, copy the path from your Drive\n",
-        "# Path = '/content/drive/MyDrive/Colab Notebooks/ET5003/e-tivity-2/'\n",
-        "\n",
         "# House Data\n",
         "train_data = Path + 'house_train.csv'\n",
         "test_data = Path + 'house_test.csv'\n",
@@ -411,11 +405,6 @@
         "outputId": "fd635b24-f737-4f85-c60e-87f586d52147"
       },
       "source": [
-        "# TODO\n",
-        "# dftrain with nans\n",
-        "# df_train = replace_with_nan(df_train,.10)\n",
-        "# print('Number of nan in train dataset: ',df_train.isnull().sum().sum())\n",
-        "\n",
         "# Find the number of nulls/NaNs in the dataset as a percentage to see if any columns need to be considered for removal\n",
         "print(\"Read of missing values as percentage of data set\")\n",
         "df_train.isna().sum()*100/len(df_train)"
@@ -1485,11 +1474,9 @@
         "outputId": "e68a41f1-5345-448b-9815-7eb7ac5125b8"
       },
       "source": [
-        "\n",
         "#Select features to include in plots\n",
         "include_featues = ['beds','bathrooms']\n",
         "\n",
-        "#run print function\n",
         "plot_box_hist(df_train_p, include_featues)\n",
         "print(df_train_p.shape)"
       ],
@@ -1532,10 +1519,8 @@
         "id": "fAc-o-4V8LTc"
       },
       "source": [
-        "\n",
-        "# Function to Detection Outlier on one-dimentional datasets.\n",
         "def remove_outliers(dframe, feature):\n",
-        "    '''Function to Detect / Remove Outliers'''\n",
+        "    '''Function to Detect and Remove Outliers'''\n",
         "  \n",
         "    #define a list to accumlate anomalies\n",
         "    anomalies = []\n",
@@ -1566,12 +1551,12 @@
         "outputId": "ced7630f-bb5b-408a-ee52-70ba2d54bbca"
       },
       "source": [
-        "print(\"After outliers have been removed\")\n",
+        "print(\"Plaot after outliers have been removed\")\n",
         "for i in range(0, len(include_featues)): \n",
         "    df_train_p = remove_outliers(df_train_p,include_featues[i])\n",
         "    #df_test_p = remove_outliers(df_test_p,include_featues[i])\n",
         "\n",
-        "#run print function\n",
+        "\n",
         "plot_box_hist(df_train_p, include_featues)\n",
         "print(df_train_p.shape)"
       ],
@@ -2075,30 +2060,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "6XUFUPABMHfF"
-      },
-      "source": [
-        "# show first data frame rows \n",
-        "# dftrain.head()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "5rq_p-D4yLBe"
-      },
-      "source": [
-        "# Generate descriptive statistics\n",
-        "# dftrain.describe()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Iqg9_uxFyZli"
@@ -2108,30 +2069,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "bw2_yypxMfsi"
-      },
-      "source": [
-        "# show first data frame rows \n",
-        "# dftest.head()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "FXo0x2u7T7-1"
-      },
-      "source": [
-        "# Generate descriptive statistics\n",
-        "# dftest.describe()"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UjMH1CSEUA1A"
@@ -2139,18 +2076,6 @@
       "source": [
         "### Expected Cost dataset"
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "7p63sCZeUNx3"
-      },
-      "source": [
-        "# Generate descriptive statistics\n",
-        "# dfcost.describe()"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
